@@ -1,3 +1,12 @@
+2006-04-18  Erlend Aasland <erlenda@gmail.com>
+
+	* lily/include/stem-tremolo.hh:
+	* lily/stem-tremolo.cc: move rotated_box () to Lookup:: and update
+	callers.
+
+	* lily/lookup.cc: add rotated_box ()
+	* lily/include/lookup.hh:
+
 2006-04-18  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* scripts/GNUmakefile: bugfix: run help2man only after scripts have 
